# Multi-Source-RAG-Q-A-System

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  REPRODUCIBILITY.md  main.py  pyproject.toml  requirements.txt  test_evaluation.py
config/: app_config.yaml  models_config.yaml  prompts_config.yaml
docker/: Dockerfile  docker-compose.yml
docs/: setup.md
notebook/: README.md
scripts/: README.md  run.bat  run.sh  setup.py
src/: __init__.py
src/chains/: __init__.py  context_builder.py  query_processing.py  rag_chain.py
src/evaluation/: __init__.py  metrics.py
src/indexing/: __init__.py  embeddings.py  indexer.py  vector_store.py
src/ingestion/: __init__.py  chunker.py  document_loader.py  preprocessor.py
src/models/: __init__.py  model_config.py  model_manager.py
src/prompts/: __init__.py  prompt_manager.py  prompt_templates.py
src/rag_system/: __init__.py  api.py  config.py  core.py
test_data/: sample_document.txt  sample_questions.txt
tests/: __init__.py  conftest.py  simple_test.py  test_evaluation.py  test_indexing.py  test_ingestion.py  test_models.py
tests/fixtures/: test_ml.txt
ui/: index.html  script.js  styles.css
